kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gore-svc
spec:
  type: ClusterIP
  selector:
    app: gore
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
