kubernetes/ingress-updated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gore-ingress # update
  labels:
    name: gore-ingress-dev # update
  annotations:
    # Let's Encrypt provides two envs for issuing SSL/TLS certificates.
    # letsencrypt-staging is for testing, with relaxed rate 
    # limits but produces untrusted, insecure certificates - HTTP.
    # letsencrypt-production issues browser-trusted 
    # SSL certificates for secure HTTPS connections.
    cert-manager.io/issuer: letsencrypt-production
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: contour
  rules:
  - host: gore2.gore.theworkpc.com #update with your dns
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gore-svc #update as well
            port: 
              number: 80
  tls:
    - hosts:
      - gore2.gore.theworkpc.com #update with your dns
      secretName: gore-tls
