kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gore-ingress
  labels:
    name: gore-ingress-dev
spec:
  ingressClassName: contour
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gore-svc
            port: 
              number: 80
